cmake_minimum_required( VERSION 3.6 )
project( PEI )
set( INSTALL_LIB_DIR "/usr/local/lib" )
set( INSTALL_INCLUDE_DIR "/usr/local/include" )

set( CMAKE_CXX_STANDARD 11 )
include_directories( include )
add_subdirectory( src )
link_directories( "/usr/lib/x86_64-linux-gnu" )
set(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} "/usr/lib/x86_64-linux-gnu")

set ( FLTK_SKIP_FLUID True )
find_package( FLTK REQUIRED )
include_directories( FLTK_INCLUDE_DIR )


if ( "${CMAKE_SYSTEM}" STREQUAL "Linux-3.16.0-4-amd64" )
  MESSAGE( STATUS "Overrides the libraries given by the FindFLTK" )

  unset ( FLTK_BASE_LIBRARY )
  unset ( FLTK_GL_LIBRARY )
  unset ( FLTK_FORMS_LIBRARY )
  unset ( FLTK_IMAGES_LIBRARY )
  find_library( FLTK_BASE_LIBRARY fltk )
  find_library( FLTK_GL_LIBRARY fltk_gl )
  find_library( FLTK_FORMS_LIBRARY fltk_forms )
  find_library( FLTK_IMAGES_LIBRARY fltk_images )

  if ( NOT FLTK_BASE_LIBRARY )
    MESSAGE( FATAL ERROR "Did not find FLTK library!")
  endif ( NOT FLTK_BASE_LIBRARY )
  if ( NOT FLTK_GL_LIBRARY )
    MESSAGE ( FATAL ERROR "Did not find FLTK GL library!")
  endif ( NOT FLTK_GL_LIBRARY )
  if ( NOT FLTK_FORMS_LIBRARY )
    MESSAGE( FATAL ERROR "Did not find FLTK forms library!")
  endif ( NOT FLTK_FORMS_LIBRARY )
  if ( NOT FLTK_IMAGES_LIBRARY )
    MESSAGE ( FATAL ERROR "Did not find FLTK images library!")
  endif ( NOT FLTK_IMAGES_LIBRARY )
endif ( "${CMAKE_SYSTEM}" STREQUAL "Linux-3.16.0-4-amd64" )

set( LIB ${FLTK_BASE_LIBRARY} )
set( LIB ${LIB} ${FLTK_GL_LIBRARY} )
set( LIB ${LIB} ${FLTK_FORMS_LIBRARY} )
set( LIB ${LIB} ${FLTK_IMAGES_LIBRARY} )
find_package( OpenGL REQUIRED )

add_executable( example.out Examples/example1.cpp )
target_link_libraries( example.out ${LIB} pei)

set( HEADERS include/dialogBox.hpp)
install( FILES ${HEADERS} DESTINATION ${INSTALL_INCLUDE_DIR}/pei )
